--- a/static/index.html
+++ b/static/index.html
@@ -27,6 +27,7 @@ License URI: http://www.themevault.net/license/-->
         <script src="js/instafeed.min.js" type="text/javascript"></script> 
         <script src="js/custom.js" type="text/javascript"></script>
         <script src="js/index.js" type="text/javascript"></script>
+        <script src="JS/libreria.js" type="text/javscript"></script>
 
     </head>
     <body>
@@ -37,6 +38,7 @@ License URI: http://www.themevault.net/license/-->
                     <div class="row">
                         <div class="col-md-6 col-sm-6 col-xs-6">
                             <p>Via S. Michele, 68, 12045 Fossano CN</p>
+                            <h3 id="h3"></h3>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-6 text-right">
                             <p>I.I.S. "G. Vallauri"</p>
@@ -290,8 +292,8 @@ License URI: http://www.themevault.net/license/-->
                                         <a  class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image5.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
                                     </div>
                                 </div>
-                                <p class="help-block text-danger">Porcodio 13 euro</p><br>
-                                <button class="btn btn-primary btn-lg btn-round" type="submit">coppa</button>
+                                <p class="help-block text-danger" id="pPrezzo">13 euro</p><br>
+                                <button class="btn btn-primary btn-lg btn-round" type="submit" id="btnAcquista">Acquista</button>
                             </div>
                             </div>
                             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
