--- a/static/contact.html
+++ b/static/contact.html
@@ -22,6 +22,7 @@ License URI: http://www.themevault.net/license/-->
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>
         <script type="text/javascript" src="js/instafeed.min.js"></script> 
+        <script type="text/javascript" src="JS/index.js"></script>
 
         <script src="js/custom.js" type="text/javascript"></script>
 
@@ -33,10 +34,10 @@ License URI: http://www.themevault.net/license/-->
                 <div class="header-top">
                     <div class="row">
                         <div class="col-md-6 col-sm-6 col-xs-6">
-                            <p>701 Old York Drive Richmond USA.</p>
+                            <p>Via S. Michele, 68, 12045 Fossano CN</p>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-6 text-right">
-                            <p>Opening Hours 8:00 am - 11:00 pm</p>
+                            <p>Opening Hours 8:00 am - 5:00 pm</p>
                         </div>
                     </div>
                 </div>
