--- a/static/service.html
+++ b/static/service.html
@@ -34,10 +34,10 @@ License URI: http://www.themevault.net/license/-->
                 <div class="header-top">
                     <div class="row">
                         <div class="col-md-6 col-sm-6 col-xs-6">
-                            <p>701 Old York Drive Richmond USA.</p>
+                            <p>Via S. Michele, 68, 12045 Fossano CN</p>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-6 text-right">
-                            <p>Opening Hours 8:00 am - 11:00 pm</p>
+                            <p>Opening Hours 8:00 am - 5:00 pm</p>
                         </div>
                     </div>
                 </div>
