--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,7 @@ License URI: http://www.themevault.net/license/-->
         <!-- Custom styles for this template -->
         <link href="css/style.css" rel="stylesheet">
         <link href="css/responsive.css" rel="stylesheet">
+        <script src="js/libreria.js" type="text/javascript"></script>
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>
         <script src="js/counterup.min.js" type="text/javascript"></script>
@@ -27,8 +28,7 @@ License URI: http://www.themevault.net/license/-->
         <script src="js/instafeed.min.js" type="text/javascript"></script> 
         <script src="js/custom.js" type="text/javascript"></script>
         <script src="js/index.js" type="text/javascript"></script>
-        <script src="JS/libreria.js" type="text/javscript"></script>
-
+       
     </head>
     <body>
         <!--header--->
@@ -88,7 +88,7 @@ License URI: http://www.themevault.net/license/-->
                                 </div>
                                 <ul class="nav navbar-nav navbar-right">
                                     <li><a href="service.html">service</a></li>
-                                    <li><a href="Google-Auth-main/views/login.html">login</a></li>
+                                    <li id="idLogin"><a href="Google-Auth-main/views/login.html" id="idA">login</a></li>
                                     <li><a href="contact.html">CONTACT Us</a></li>
 
                                     <!--                                <li><a class="search" id="searchtoggl"><i class="fa fa-search"></i></a>
@@ -284,8 +284,21 @@ License URI: http://www.themevault.net/license/-->
                 <div class="tab-content">
                     <div class="tab-pane fade in active" id="all">
                         <div class="row">
-                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                                <div>
+                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12" id="divIniziale">
+                                <div id="card">
+                                    <div class="food-image">
+                                        <img src="images/Home/Image5.png" class="img-responsive" />
+                                        <div class="overlay">
+                                            <a  class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image5.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
+                                        </div>
+                                    </div>
+                                    <h6 class="help-block text-danger">Descrizione</h6>
+                                    <h6 class="help-block text-danger">Prezzo &euro;</h6>
+                                    <button class="btn btn-primary btn-lg btn-round" type="submit">coppa</button>
+                                    <!--<p class="help-block text-danger" id="pPrezzo">13 euro</p><br>
+                                    <button class="btn btn-primary btn-lg btn-round" type="submit" id="btnAcquista">Acquista</button>-->
+                                </div>
+                                <!--<div>
                                 <div class="food-image">
                                     <img src="images/Home/Image5.png" class="img-responsive" />
                                     <div class="overlay">
@@ -352,7 +365,7 @@ License URI: http://www.themevault.net/license/-->
                                         <a  class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image12.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
 
                         </div>
                     </div>
