--- a/static/index.html
+++ b/static/index.html
@@ -283,21 +283,7 @@ License URI: http://www.themevault.net/license/-->
             <div class="container">
                 <div class="tab-content">
                     <div class="tab-pane fade in active" id="all">
-                        <div class="row">
-                            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12" id="divIniziale">
-                                <div id="card">
-                                    <div class="food-image">
-                                        <img src="images/Home/Image5.png" class="img-responsive" />
-                                        <div class="overlay">
-                                            <a  class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image5.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                        </div>
-                                    </div>
-                                    <h6 class="help-block text-danger">Descrizione</h6>
-                                    <h6 class="help-block text-danger">Prezzo &euro;</h6>
-                                    <button class="btn btn-primary btn-lg btn-round" type="submit">coppa</button>
-                                    <!--<p class="help-block text-danger" id="pPrezzo">13 euro</p><br>
-                                    <button class="btn btn-primary btn-lg btn-round" type="submit" id="btnAcquista">Acquista</button>-->
-                                </div>
+                        <div class="row" id="row">
                                 <!--<div>
                                 <div class="food-image">
                                     <img src="images/Home/Image5.png" class="img-responsive" />
@@ -366,138 +352,6 @@ License URI: http://www.themevault.net/license/-->
                                     </div>
                                 </div>
                             </div>-->
-
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="dishes">
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image6.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image6.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image7.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image7.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image8.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image8.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="dinner">
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image11.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image11.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image12.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image12.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div> 
-                    </div>
-                    <div class="tab-pane fade" id="lunch">
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image10.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image10.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image11.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image11.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image12.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image12.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>  
-                    </div>
-                    <div class="tab-pane fade" id="drinks">
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image5.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image5.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image6.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image6.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image7.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image7.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image8.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image8.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="starters">
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image10.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image10.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image11.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image11.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                            <div class="food-image">
-                                <img src="images/Home/Image12.png" />
-                                <div class="overlay">
-                                    <a href="#" class="info pop"><img alt="1" class="img-responsive" src="images/Home/Image12.png" style="display: none"><i aria-hidden="true" class="fa fa-plus-square-o"></i></a>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
