Aggiunta al carrello

--- a/static/index.html
+++ b/static/index.html
@@ -68,11 +68,11 @@ License URI: http://www.themevault.net/license/-->
                                     <li><a href="menu.html">Menu</a></li>
                                     <li class="dropdown">
                                         <a data-toggle="dropdown" class="toggle set-pos">
-                                            Pages <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                            Visualizza <i class="fa fa-caret-down" aria-hidden="true"></i>
                                         </a>
                                         <div class="dropdown-menu btn-block box-content-menu">
                                             <ul class="menu">
-                                                <li><a class="dropdown" href="404.html">404 page</a></li>
+                                                <li><a class="dropdown" href="carrello.html">ORDINE</a></li>
                                                 <li><a class="dropdown" href="buttons.html">buttons</a></li>
                                                 <li><a class="dropdown" href="grid.html">grid</a></li>
                                                 <li><a class="dropdown" href="tab&accordian.html">tab & accordian</a></li>
