--- a/static/carrello.html
+++ b/static/carrello.html
@@ -28,7 +28,7 @@ License URI: http://www.themevault.net/license/-->
         <script src="js/waypoints.min.js" type="text/javascript"></script>
         <script src="js/instafeed.min.js" type="text/javascript"></script> 
         <script src="js/custom.js" type="text/javascript"></script>
-        <script src="js/index.js" type="text/javascript"></script>
+        <script src="js/carrello.js" type="text/javascript"></script>
        
     </head>
     <body>
