--- a/static/carrello.html
+++ b/static/carrello.html
@@ -122,7 +122,7 @@ License URI: http://www.themevault.net/license/-->
 
 
 
-<div class="container">
+<div class="container" id="container">
    <div class="row" id="topTable">
        <div class="col-sm-1"> </div>
        <div class="col-sm-1"> </div>
@@ -133,18 +133,18 @@ License URI: http://www.themevault.net/license/-->
        <div class="col-sm-1">Totale</div>
        <div class="col-sm-1"> </div>
    </div>
-   <div class="row" id="topTable">
+  <!-- <div class="row" id="topTable">
     <div class="col-sm-1"> </div>
     <div class="col-sm-1"><button id="btnEliminaCarrello" type="button">X</button></div>
     <div class="col-sm-1"><img style="width: 100px;" src="images/cibo/ciambella.jpg"></div>
-    <div class="col-sm-4" "><h3>Ciambella</h1><br><p>Buonissima</p></div>
+    <div class="col-sm-4" ><h3>Ciambella</h1><br><p>Buonissima</p></div>
     <div class="col-sm-1">75$</div>
     <div class="col-sm-2"><input placeholder="Enter a number" required type="number" style="color: black; text-align: center; width: 120px;" min="0"/></div>
     <div class="col-sm-1">7500$</div>
     <div class="col-sm-1"> </div>
-</div>
+</div>-->
 <div class="row" id="topTable">
-    <input type="button" class="btn btn-success" value="Porcodio">
+    <input type="button" class="btn btn-success" value="CHECKOUT">
 </div>
    
 </div>
