--- a/static/carrello.html
+++ b/static/carrello.html
@@ -126,11 +126,11 @@ License URI: http://www.themevault.net/license/-->
    <div class="row" id="topTable">
        <div class="col-sm-1"> </div>
        <div class="col-sm-1"> </div>
-       <div class="col-sm-1">FOTO BRO</div>
+       <div class="col-sm-1">IMMAGINE</div>
        <div class="col-sm-4">DESCRIZIONE</div>
-       <div class="col-sm-1">Prezzo</div>
-       <div class="col-sm-2">Quantità</div>
-       <div class="col-sm-1">Totale</div>
+       <div class="col-sm-1">PREZZO</div>
+       <div class="col-sm-2">QUANTITA'</div>
+       <div class="col-sm-1">TOTALE</div>
        <div class="col-sm-1"> </div>
    </div>
   <!-- <div class="row" id="topTable">
@@ -143,12 +143,14 @@ License URI: http://www.themevault.net/license/-->
     <div class="col-sm-1">7500$</div>
     <div class="col-sm-1"> </div>
 </div>-->
-<div class="row" id="topTable">
+<!--<div class="row" id="topTable">
     <input type="button" class="btn btn-success" value="CHECKOUT">
-</div>
+</div>-->
    
 </div>
-
+<div id="topTable">
+    <button style="margin: 0 auto;" type="button" class="btn btn-success" id="BtnCheckout">CONFERMA ORDINE</button>
+</div>
 
 
 
