--- a/static/carrello.html
+++ b/static/carrello.html
@@ -148,7 +148,7 @@ License URI: http://www.themevault.net/license/-->
 </div>-->
    
 </div>
-<div id="topTable">
+<div id="topTable1" class="row">
     <button style="margin: 0 auto;" type="button" class="btn btn-success" id="BtnCheckout">CONFERMA ORDINE</button>
 </div>
 <!-- Button trigger modal -->
