--- a/static/carrello.html
+++ b/static/carrello.html
@@ -149,15 +149,52 @@ License URI: http://www.themevault.net/license/-->
    
 </div>
 <div id="topTable1" class="row">
-    <button style="margin: 0 auto;" type="button" class="btn btn-success" id="BtnCheckout">CONFERMA ORDINE</button>
+    <!--<button style="margin: 0 auto;" type="button" class="btn btn-success" id="BtnCheckout">CONFERMA ORDINE</button>-->
+    <button
+type="button"
+style="border-radius: 5px;"
+class="btn btn-primary"
+data-mdb-toggle="modal"
+data-mdb-target="#exampleModal"
+id="myInput"
+>
+CHECKOUT MODAL
+</button>
 </div>
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+<div id="modalstart">
+
+    <!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">CHECKOUT</h5>
+        </div>
+        <div class="modal-body">
+          <h6>SELEZIONE METODO DI PAGAMENTO</h6>
+        </div>
+        <div class="modal-footer">
+          <button type="button" id="closeModal" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" style="border-radius: 5px;" id="BtnCheckout">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+<!--<button type="button" class="btn btn-primary"  id="myInput" onclick="visualizzaModal()" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
     Launch static backdrop modal
   </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+
+
+-->
+  <!--
+  <div id="myModal" class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -173,7 +210,7 @@ License URI: http://www.themevault.net/license/-->
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
 
 
