Partial admin client

--- a/static/index.html
+++ b/static/index.html
@@ -71,13 +71,9 @@ License URI: http://www.themevault.net/license/-->
                                             Visualizza <i class="fa fa-caret-down" aria-hidden="true"></i>
                                         </a>
                                         <div class="dropdown-menu btn-block box-content-menu">
-                                            <ul class="menu">
+                                            <ul class="menu" id="drop">
                                                 <li><a class="dropdown" href="carrello.html">ORDINE</a></li>
-                                                <li><a class="dropdown" href="buttons.html">buttons</a></li>
-                                                <li><a class="dropdown" href="grid.html">grid</a></li>
-                                                <li><a class="dropdown" href="tab&accordian.html">tab & accordian</a></li>
-                                                <li><a class="dropdown" href="typography.html">typography</a></li>
-                                                <li><a class="dropdown" href="icons.html">icons</a></li>
+                                                
                                             </ul>
                                         </div>
 
