--- a/static/visOrdini.html
+++ b/static/visOrdini.html
@@ -27,7 +27,7 @@ License URI: http://www.themevault.net/license/-->
         <script src="js/waypoints.min.js" type="text/javascript"></script>
         <script src="js/instafeed.min.js" type="text/javascript"></script> 
         <script src="js/custom.js" type="text/javascript"></script>
-        <script src="js/admin.js" type="text/javascript"></script>
+        <script src="js/viOrdini.js" type="text/javascript"></script>
        
     </head>
     <body>
@@ -150,10 +150,37 @@ License URI: http://www.themevault.net/license/-->
             <div class="clearfix"></div>
         </section>
 
-        <div class="input-group mb-3" style="margin: 0 auto;border-radius: 2px;background-color: bisque; width: 350px; height: 450px;padding-top: 11%;">
-            <button type="button" class="btn btn-primary btn-lg btn-block" style="display: block;" id="visOrdini">VISUALIZZA ORDINI</button>
-            <button type="button" class="btn btn-primary btn-lg btn-block" style="display: block;" id="insProd">INSERISCI PRODOTTI</button>
-            <button type="button" class="btn btn-primary btn-lg btn-block" style="display: block;" id="stOrdini">STORICO ORDINI</button>
+        <div class="input-group mb-3" style="margin: 0 auto;border-radius: 2px;background-color: bisque; width: 650px; height: 650px;">
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Ordine di : Samuele Lingua</th>
+                    <th scope="col">Quantità</th>
+                    <th scope="col">Prezzo</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Cotto & Maionese</td>
+                    <td>4</td>
+                    <td>5.60€</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Ciambella</td>
+                    <td>2</td>
+                    <td>2€</td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>7.60€</td>
+                  </tr>
+                </tbody>
+              </table>
         </div>
 
 
