--- a/static/visOrdini.html
+++ b/static/visOrdini.html
@@ -38,7 +38,7 @@ License URI: http://www.themevault.net/license/-->
                     <div class="row">
                         <div class="col-md-6 col-sm-6 col-xs-6">
                             <p>Via S. Michele, 68, 12045 Fossano CN</p>
-                            <h3 id="h3"></h3>
+                            <h5 id="h3"></h5>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-6 text-right">
                             <p>I.I.S. "G. Vallauri"</p>
@@ -150,37 +150,8 @@ License URI: http://www.themevault.net/license/-->
             <div class="clearfix"></div>
         </section>
 
-        <div class="input-group mb-3" style="margin: 0 auto;border-radius: 2px;background-color: bisque; width: 650px; height: 650px;">
-            <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Ordine di : Samuele Lingua</th>
-                    <th scope="col">Quantità</th>
-                    <th scope="col">Prezzo</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Cotto & Maionese</td>
-                    <td>4</td>
-                    <td>5.60€</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Ciambella</td>
-                    <td>2</td>
-                    <td>2€</td>
-                  </tr>
-                  <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>7.60€</td>
-                  </tr>
-                </tbody>
-              </table>
+        <div class="input-group mb-3" style="margin: 0 auto;border-radius: 2px;background-color: bisque; width: 60%; height: 30%;" id="divMain">
+            
         </div>
 
 
