payments not fixed

--- a/static/carrello.html
+++ b/static/carrello.html
@@ -176,11 +176,21 @@ CHECKOUT MODAL
           <h5 class="modal-title">CHECKOUT</h5>
         </div>
         <div class="modal-body">
-          <h6>SELEZIONE METODO DI PAGAMENTO</h6>
+          <h6 style="text-align: center;">SELEZIONE METODO DI PAGAMENTO</h6>
+          <table>
+              <thead>
+                <th scope="col"><img style="width: 80px; height: 80px;" src="images/Home/satispay.jpg"></th>
+                <th>&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                <th scope="col"><img style="width: 80px; height: 80px;" src="images/Home/cash.jpg"></th>
+              </thead>
+              <tbody>
+
+              </tbody>
+          </table>
         </div>
         <div class="modal-footer">
           <button type="button" id="closeModal" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" style="border-radius: 5px;" id="BtnCheckout">Save changes</button>
+          <button type="button" class="btn btn-primary" style="border-radius: 5px;" id="BtnCheckout">CHECKOUT</button>
         </div>
       </div>
     </div>
