Fixed table order

--- a/static/carrello.html
+++ b/static/carrello.html
@@ -179,9 +179,9 @@ CHECKOUT MODAL
           <h6 style="text-align: center;">SELEZIONE METODO DI PAGAMENTO</h6>
           <table>
               <thead>
-                <th scope="col"><img style="width: 80px; height: 80px;" src="images/Home/satispay.jpg"></th>
+                <th scope="col"><img style="width: 80px; height: 80px;" src="images/Home/satispay.jpg" id="imgSati"></th>
                 <th>&nbsp;&nbsp;&nbsp;&nbsp;</th>
-                <th scope="col"><img style="width: 80px; height: 80px;" src="images/Home/cash.jpg"></th>
+                <th scope="col"><img style="width: 80px; height: 80px;" src="images/Home/cash.jpg" id="imgCash"></th>
               </thead>
               <tbody>
 
