--- a/static/admin.html
+++ b/static/admin.html
@@ -81,7 +81,7 @@ License URI: http://www.themevault.net/license/-->
                                 <div class="logo hidden-xs">
                                     <a href="index.html"><img src="images/Home/logo.png"/></a>
                                 </div>
-                                <ul class="nav navbar-nav navbar-right">
+                                <ul class="nav navbar-nav navbar-right" id="ul">
                                     <li><a href="service.html">service</a></li>
                                     <li id="idLogin"><a href="Google-Auth-main/views/login.html" id="idA">login</a></li>
                                     <li><a href="contact.html">CONTACT Us</a></li>
