Added storico ordini

--- a/static/storico.html
+++ b/static/storico.html
@@ -27,7 +27,7 @@ License URI: http://www.themevault.net/license/-->
         <script src="js/waypoints.min.js" type="text/javascript"></script>
         <script src="js/instafeed.min.js" type="text/javascript"></script> 
         <script src="js/custom.js" type="text/javascript"></script>
-        <script src="js/admin.js" type="text/javascript"></script>
+        <script src="js/storico.js" type="text/javascript"></script>
        
     </head>
     <body>
@@ -150,10 +150,8 @@ License URI: http://www.themevault.net/license/-->
             <div class="clearfix"></div>
         </section>
 
-        <div class="input-group mb-3" style="margin: 0 auto;border-radius: 2px;background-color: bisque; width: 350px; height: 450px;padding-top: 11%;">
-            <button type="button" class="btn btn-primary btn-lg btn-block" style="display: block;" id="visOrdini">VISUALIZZA ORDINI</button>
-            <button type="button" class="btn btn-primary btn-lg btn-block" style="display: block;" id="insProd">INSERISCI PRODOTTI</button>
-            <button type="button" class="btn btn-primary btn-lg btn-block" style="display: block;" id="stOrdini">STORICO ORDINI</button>
+        <div class="input-group mb-3" style="margin: 0 auto;border-radius: 2px;background-color: bisque; width: 60%; height: 30%;" id="divMain">
+            
         </div>
 
 
