--- a/static/visOrdini.html
+++ b/static/visOrdini.html
@@ -71,7 +71,7 @@ License URI: http://www.themevault.net/license/-->
                                             Visualizza <i class="fa fa-caret-down" aria-hidden="true"></i>
                                         </a>
                                         <div class="dropdown-menu btn-block box-content-menu">
-                                            <ul class="menu">
+                                            <ul class="menu" id="drop">
                                                 <li><a class="dropdown" href="carrello.html">ORDINE</a></li>
                                             </ul>
                                         </div>
