--- a/static/inserisciProdottiA.html
+++ b/static/inserisciProdottiA.html
@@ -160,7 +160,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Chiudi</button>
-          <button type="button" class="btn btn-primary">Salva le Modifiche</button>
+          <button type="button" class="btn btn-primary" id="save">Salva le Modifiche</button>
         </div>
       </div>
     </div>
