edit worksssgit add .!

--- a/static/inserisciProdottiA.html
+++ b/static/inserisciProdottiA.html
@@ -115,6 +115,7 @@
             <div class="bootstrap-select-wrapper">
                 <label>Scegli categoria</label>
                 <select title="Scegli una opzione" id="select">
+                  <option value="tutto">Tutto</option>
                   <option value="panini">Panini</option>
                   <option value="dolci">Dolci</option>
                   <option value="bevande">Bevande</option>
