--- a/static/inserisciProdottiA.html
+++ b/static/inserisciProdottiA.html
@@ -167,6 +167,47 @@
     </div>
   </div>
 
+  <!-- Modal -->
+<div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Inserisci</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <input class="form-control" type="text" placeholder="Readonly input here…" readonly id="txtID1" style="width: 50%;margin: 0 auto;">
+            <div class="input-group input-group-sm mb-3" style="margin: 0 auto;width: 50%">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="inputGroup-sizing-sm">Descrizione</span>
+                </div>
+                <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" id="desc1">
+              </div>
+              <div class="input-group input-group-sm mb-3" style="margin: 0 auto;width: 50%">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="inputGroup-sizing-sm">Tipo</span>
+                </div>
+                <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" id="tipo1">
+              </div>
+              <div class="input-group input-group-sm mb-3" style="margin: 0 auto;width: 50%">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Prezzo</span>
+                  </div>
+                <input type="number" min="1" max="20" id="prez12" style="color: black; text-align: center; width: 120px;margin: 0 auto;">
+              </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Chiudi</button>
+          <button type="button" class="btn btn-primary" id="save1">Salva le Modifiche</button>
+        </div>
+      </div>
+    </div>
+  </div>
+        <div class="container">
+            <button id="btnIns" class="btn btn-primary" style="margin:0 auto;">INSERISCI NUOVO PRODUCTS</button>
+        </div>
 
         <!--footer-->
         <footer>
