--- a/static/inserisciProdottiA.html
+++ b/static/inserisciProdottiA.html
@@ -206,7 +206,7 @@
     </div>
   </div>
         <div class="container">
-            <button id="btnIns" class="btn btn-primary" style="margin:0 auto;">INSERISCI NUOVO PRODUCTS</button>
+            <button id="btnIns" class="btn btn-primary" style="margin:0 auto;" style="margin: 0 auto;">INSERISCI NUOVO PRODOTTO</button>
         </div>
 
         <!--footer-->
