Storico ordini partial

--- a/static/inserisciProdottiA.html
+++ b/static/inserisciProdottiA.html
@@ -196,6 +196,10 @@
                     <span class="input-group-text" id="inputGroup-sizing-sm">Prezzo</span>
                   </div>
                 <input type="number" min="1" max="20" id="prez12" style="color: black; text-align: center; width: 120px;margin: 0 auto;">
+                  <div class="custom-file">
+                      <input type="file" class="custom-file-input" id="img1">
+                      <label class="custom-file-label" for="customFile">Scegli File immagine</label>
+                  </div>
               </div>
         </div>
         <div class="modal-footer">
