--- a/static/index.html
+++ b/static/index.html
@@ -65,7 +65,7 @@ License URI: http://www.themevault.net/license/-->
                             <div class="collapse navbar-collapse text-center" id="myNavbar">
                                 <ul class="nav navbar-nav margin-l">
                                     <li class="active"><a href="index.html">Home</a></li>
-                                    <li><a href="menu.html">Menu</a></li>
+                                    <li><a href="#menu">Menu</a></li>
                                     <li class="dropdown">
                                         <a data-toggle="dropdown" class="toggle set-pos">
                                             Visualizza <i class="fa fa-caret-down" aria-hidden="true"></i>
@@ -269,7 +269,7 @@ License URI: http://www.themevault.net/license/-->
             <div class="height-135"></div>
             <div class="pos-center">
                 <ul class="nav nav-pills center-pills">
-                    <li class="active"><a href="#all" id="ProdottiAll" data-toggle="pill">TUTTO</a></li>
+                    <li class="active"><a href="#all" id="ProdottiAll" data-toggle="pill" name="menu">TUTTO</a></li>
                     <li><a href="#dishes" id="ProdottiPanini" data-toggle="pill">PANINI</a></li>
                     <li><a href="#dinner" id="ProdottiDolci" data-toggle="pill">DOLCI</a></li>
                     <li><a href="#lunch" id="ProdottiBevande" data-toggle="pill">BEVANDE</a></li>
