--- a/static/storico.html
+++ b/static/storico.html
@@ -19,6 +19,7 @@ License URI: http://www.themevault.net/license/-->
         <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
         <!-- Custom styles for this template -->
         <link href="css/style.css" rel="stylesheet">
+        <link href="css/index.css" rel="stylesheet">
         <link href="css/responsive.css" rel="stylesheet">
         <script src="js/libreria.js" type="text/javascript"></script>
         <script src="js/jquery.min.js" type="text/javascript"></script>
@@ -150,8 +151,27 @@ License URI: http://www.themevault.net/license/-->
             <div class="clearfix"></div>
         </section>
 
-        <div class="input-group mb-3" style="margin: 0 auto;border-radius: 2px;background-color: bisque; width: 60%; height: 30%;" id="divMain">
-            
+        <div class="input-group mb-3" style="margin: 0 auto; border-bottom: 1px solid black;  height: 20%;" id="divMain">
+           <!-- <div class="row" style="text-align: center;">
+                <div class="col-xs-2" id="NomeUtente">
+                  Acquisto di 
+                </div>
+                <div class="col-xs-2">
+                  One of three columns
+                </div>
+                <div class="col-xs-2">
+                  One of three columns
+                </div>
+                <div class="col-xs-2">
+                    One of three columns
+                  </div>
+                  <div class="col-xs-2">
+                    One of three columns
+                  </div>
+                  <div class="col-xs-2">
+                    One of three columns
+                  </div>
+              </div>-->
         </div>
 
 
